# aocr_c

./: .gitignore  CMakeLists.txt  load_model.py  main.cpp  test.cpp  test.py  utils.cpp  utils.h
